--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <!-- .gnav -->
         <nav class="gnav" class="fixed">
             <ul class="gnav-list">
+                <li class="gnav-item"><a class="gnav-link" href="#about-section">ABOUT</a></li>
                 <li class="gnav-item"><a class="gnav-link" href="#works-section">WORKS</a></li>
                 <li class="gnav-item"><a class="gnav-link" href="#feature-section">FEATURE</a></li>
-                <li class="gnav-item"><a class="gnav-link" href="#about-section">ABOUT</a></li>
                 <li class="gnav-item"><a class="gnav-link" href="#skill-section">SKILL</a></li>
                 <li class="gnav-item"><a class="gnav-link" href="#contact-section">CONTACT</a></li>
             </ul>
@@ -38,13 +38,41 @@
         <!-- .header -->
         <header class="header">
             <h1 class="logo">
-                <div class="logo-title">RYUICHI MANIWA</div>
-                <div class="logo-subtitle">PORTFOLIO</div>
+                <div class="logo-title">PORTFOLIO</div>
             </h1>
         </header>
         <!-- /.header -->
 
         <main class="content">
+
+            <!-- .about-section -->
+            <section class="about-section section" id="about-section">
+                <div class="inner">
+                    <div class="section-heading">
+                        <h2 class="heading-primary">ABOUT</h2>
+                    </div>
+                    <div class="section-lead">
+                        <p>
+                            こんにちは！馬庭龍一です！
+                        </p>
+                    </div>
+                    <div class="section-body about">
+                        <div class="about-item">
+                            <div class="about-image-wrapper">
+                                <img class="about-image lazyload fadein" data-src="img/about/myface.jpg" alt="">
+                            </div>
+                            <div class="about-body">
+                                <p>
+                                    <br>東京工業大学に所属している3年生です。大学院に進学する予定です。今年の3月から研究室に所属して、データ分析や通信制御などを専攻する予定です。
+                                    <br>今年の2月から時間に余裕が生まれるため、プログラミング業務を行う週3～4日で働くことのできるインターン先を探しています。
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /.about-section -->
 
             <!-- .works-section -->
             <section class="works-section section" id="works-section">
@@ -109,35 +137,6 @@
                 </div>
             </section>
             <!-- /.feature-section -->
-
-            <!-- .about-section -->
-            <section class="about-section section" id="about-section">
-                <div class="inner">
-                    <div class="section-heading">
-                        <h2 class="heading-primary">ABOUT</h2>
-                    </div>
-                    <div class="section-lead">
-                        <p>
-                            こんにちは！馬庭龍一です！
-                        </p>
-                    </div>
-                    <div class="section-body about">
-                        <div class="about-item">
-                            <div class="about-image-wrapper">
-                                <img class="about-image lazyload fadein" data-src="img/about/myface.jpg" alt="">
-                            </div>
-                            <div class="about-body">
-                                <p>
-                                    <br>東京工業大学に所属している3年生です。大学院に進学する予定です。今年の3月から研究室に所属して、データ分析や通信制御などを専攻する予定です。
-                                    <br>今年の2月から時間に余裕が生まれるため、プログラミング業務を行う週3～4日で働くことのできるインターン先を探しています。
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- /.about-section -->
 
             <!-- .skill-section -->
             <section class="skill-section section" id="skill-section">
